2005-09-04  Roland Illig  <roland.illig@gmx.de>

	* main.h: Removed unused variables acs_hline and acs_vline.
	* tty.h: Added tty_printf().
	* tty.c: Likewise.

2005-09-01  Roland Illig  <roland.illig@gmx.de>

	* view.c (view_fix_cursor_position): Renamed to
	view_scroll_to_cursor.
	* treestore.c (str_common): Don't require the arguments to be
	different.

2005-08-29  Roland Illig  <roland.illig@gmx.de>

	* slint.c: The handling of user interrupts has been moved to ...
	* tty.c: ... this newly created file, which contains a simple,
	not yet complete interface to the terminal library. It should be
	used instead of depending directly on ncurses or SLang features.
	* tty.h: Added the new function prototypes from tty.c and some
	legacy definitions.
	* view.c: Converted to use the new tty functions.
	* myslang.h: Partly switched to the new tty functions.

2005-08-28  Roland Illig  <roland.illig@gmx.de>

	* view.c (view_hexedit_save_changes): Added an assertion that
	view->filename be not NULL.
	* view.c (view_toggle_magic_mode): Check if filename != NULL
	before dereferencing the pointer.
	* view.c (view_change_nroff_mode_cmd): Renamed to
	view_toggle_nroff_mode_cmd.
	* view.c (view_new): Separated the mode toggling functions from
	updating the display. The non-updating functions are called on
	initialization.

2005-08-27  Jindrich Makovicka  <makovick@kmlinux.fjfi.cvut.cz>

	* view.c (view_normal_search_cmd): Initialize exp to avoid
	freeing of uninitialized pointer on cancel.

2005-08-25  Pavel Tsekov  <ptsekov@gmx.net>

	* key.c (xmouse_get_event): Disable double-click tracking for
	mouse wheel events.

2005-08-22  Roland Illig  <roland.illig@gmx.de>

	* view.c (struct WView): Renamed dpy_topleft to dpy_start, as it
	does not always represent the top-left corner of the screen.
	Replaced dpy_complete with dpy_end, the offset of the first byte
	after the displayed region.
	* view.c (view_display_status): In normal display mode (that is: